0.1.1 - @gabrielcsapo: cleans up dark mode styling - @gabrielcsapo: ensures that hover does not auto select item

--- a/src/client/theme/SearchBar/SearchButton.css
+++ b/src/client/theme/SearchBar/SearchButton.css
@@ -18,7 +18,7 @@
   /* searchbox */
   --docsearch-searchbox-height: 56px;
   --docsearch-searchbox-background: rgb(235, 237, 240);
-  --docsearch-searchbox-focus-background: #fff;
+  --docsearch-searchbox-focus-background: rgb(235, 237, 240);
   --docsearch-searchbox-shadow: inset 0 0 0 2px var(--docsearch-primary-color);
 
   /* hit */
@@ -53,7 +53,7 @@ html[data-theme="dark"] {
   --docsearch-modal-shadow: inset 1px 1px 0 0 rgb(44, 46, 64),
     0 3px 8px 0 rgb(0, 3, 9);
   --docsearch-searchbox-background: rgb(9, 10, 17);
-  --docsearch-searchbox-focus-background: #000;
+  --docsearch-searchbox-focus-background: rgb(9, 10, 17);
   --docsearch-hit-color: rgb(190, 195, 201);
   --docsearch-hit-shadow: none;
   --docsearch-hit-background: rgb(9, 10, 17);
